選秀結果要多3列

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -15,7 +15,7 @@
 						<% });%>
 					</tr>
 					
-					<% for (var round = 1; round <= resultTable.numOfRound; round++) { %>
+					<% for (var round = 1; round <= resultTable.numOfRound + 3; round++) { %>
 						<tr>
 							<th><%= round %></th>
 							<% _.each(teams, function (team) { %>
