--- a/views/manager/index.ejs
+++ b/views/manager/index.ejs
@@ -26,6 +26,11 @@
 					<% }); %>
 				</div>
 			</div>
+			<div class="well">
+				<div class="manager-team-item">
+					<a class="btn btn-manager-team" href="/logout">登出</a>
+				</div>				
+			</div>
 		</div>
 	</div>
 </div>
